--- a/record_label_project/templates/album/view_album.html
+++ b/record_label_project/templates/album/view_album.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="main">
-        {{ album.name }}<br/>
+        {{ album.title }}<br/>
         {{ album.no_songs }}<br/>
     </div>
 {% endblock %}
