--- a/record_label_project/templates/artist/view_artist.html
+++ b/record_label_project/templates/artist/view_artist.html
@@ -8,4 +8,7 @@
         {{ artist.phone }}<br/>
         {{ artist.mail }}<br/>
     </div>
+
+    <a class="btn btn-warning" href="{% url 'update_artist' artist.id %}">Update artist</a>
+    <a class="btn btn-danger" href="{% url 'delete_artist' artist.id %}">Delete artist</a>
 {% endblock %}
