--- a/record_label_project/templates/base.html
+++ b/record_label_project/templates/base.html
@@ -1,10 +1,21 @@
 <html>
   <head>
-    <title>My first web project</title>
+        {% block title %}
+        {% endblock %}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
+        {% block style %}
+        {% endblock %}
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
+        {% block hscript %}
+        {% endblock %}
   </head>
   <body>
-    <p>TO DO : menu</p>
+    {% include 'navbar.html' %}
     {% block content %}
     {% endblock %}
   </body>
 </html>
+
+
