--- a/record_label_project/templates/base.html
+++ b/record_label_project/templates/base.html
@@ -3,6 +3,9 @@
         {% block title %}
         {% endblock %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
+        {% load static %}
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+
         {% block style %}
         {% endblock %}
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" crossorigin="anonymous"></script>
