--- a/record_label_project/templates/song/delete_song.html
+++ b/record_label_project/templates/song/delete_song.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+
+{% block title %}
+    <title>Delete song</title>
+{% endblock %}
+
 {% block content %}
     <div class="main">
         <form method="POST">
