--- a/record_label_project/templates/album/create_album.html
+++ b/record_label_project/templates/album/create_album.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
+
+{% block title %}
+    <title>Create an album</title>
+{% endblock %}
+
 {% block content %}
-    <form method="POST" enctype="multipart/form-data">
-
-        <!-- Security token -->
-        {% csrf_token %}
-
-        <!-- Using the formset -->
-        {{ form.as_p }}
-
-        <input type="submit" value="Submit">
-    </form>
+    <div class="div-form">
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Submit">
+        </form>
+    </div>
 {% endblock %}
