--- a/record_label_project/templates/artist/list_artists.html
+++ b/record_label_project/templates/artist/list_artists.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+    <title>Artists</title>
+{% endblock %}
 {% block content %}
     <div class="main">
         <p>
@@ -12,6 +15,8 @@
                     </li>
                 {% endfor %}
             </ul>
+        {% else %}
+            <p> No artist found.</p>
         {% endif %}
     </div>
 {% endblock %}
