--- a/record_label_project/templates/collaboration/update_collaboration.html
+++ b/record_label_project/templates/collaboration/update_collaboration.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
+
+{% block title %}
+    <title>Update collaboration</title>
+{% endblock %}
+
 {% block content %}
-    <div class="main">
-        <!-- Create a Form -->
+    <div class="div-form">
         <form method="POST">
-            <!-- Security token by Django -->
             {% csrf_token %}
-
-            <!-- form as paragraph -->
             {{ form.as_p }}
-
             <input type="submit" value="Update">
         </form>
     </div>
