--- a/record_label_project/templates/contract/delete_contract.html
+++ b/record_label_project/templates/contract/delete_contract.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+
+{% block title %}
+    <title>Delete contract</title>
+{% endblock %}
+
 {% block content %}
     <div class="main">
         <form method="POST">
