--- a/record_label_project/templates/collaboration/list_collaborations.html
+++ b/record_label_project/templates/collaboration/list_collaborations.html
@@ -3,9 +3,9 @@
     <title>Collaborations</title>
 {% endblock %}
 {% block content %}
-    <div class="main">
+    <div class="div-form">
         <p>
-            <a class="btn btn-primary" href="{% url 'create_collaboration' %}">Add artist</a>
+            <a class="btn btn-primary" href="{% url 'create_collaboration' %}">Add collaboration</a>
         </p>
         {% if collaborations %}
             <ul>
