--- a/record_label_project/templates/concert/list_concerts.html
+++ b/record_label_project/templates/concert/list_concerts.html
@@ -3,7 +3,7 @@
     <title>Concerts</title>
 {% endblock %}
 {% block content %}
-    <div class="main">
+    <div class="div-form">
         <p>
             <a class="btn btn-primary" href="{% url 'create_concert' %}">Add concert</a>
         </p>
