--- a/record_label_project/templates/location/list_locations.html
+++ b/record_label_project/templates/location/list_locations.html
@@ -3,7 +3,7 @@
     <title>Locations</title>
 {% endblock %}
 {% block content %}
-    <div class="main">
+    <div class="div-form">
         <p>
             <a class="btn btn-primary" href="{% url 'create_location' %}">Add location</a>
         </p>
