--- a/record_label_project/templates/song/list_songs.html
+++ b/record_label_project/templates/song/list_songs.html
@@ -3,7 +3,7 @@
     <title>Songs</title>
 {% endblock %}
 {% block content %}
-    <div class="main">
+    <div class="div-form">
         <p>
             <a class="btn btn-primary" href="{% url 'create_song' %}">Add song</a>
         </p>
