--- a/record_label_project/templates/contract/list_contracts.html
+++ b/record_label_project/templates/contract/list_contracts.html
@@ -3,7 +3,7 @@
     <title>Contracts</title>
 {% endblock %}
 {% block content %}
-    <div class="main">
+    <div class="div-form">
         <p>
             <a class="btn btn-primary" href="{% url 'create_contract' %}">Add contract</a>
         </p>
