--- a/record_label_project/templates/navbar.html
+++ b/record_label_project/templates/navbar.html
@@ -34,6 +34,10 @@
         </div>
       </li>
 
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'billboard' %}">Billboard<span class="sr-only">(current)</span></a>
+      </li>
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
