--- a/record_label_project/templates/album/list_albums.html
+++ b/record_label_project/templates/album/list_albums.html
@@ -3,7 +3,7 @@
     <title>Albums</title>
 {% endblock %}
 {% block content %}
-    <div class="main">
+    <div class="div-form">
         <p>
             <a class="btn btn-primary" href="{% url 'create_album' %}">Add album</a>
         </p>
