--- a/record_label_project/templates/artist/list_artists.html
+++ b/record_label_project/templates/artist/list_artists.html
@@ -3,43 +3,53 @@
     <title>Artists</title>
 {% endblock %}
 {% block content %}
-    <div class="div-form">
-        <p>
-            <a class="btn btn-primary" href="{% url 'create_artist' %}">Add artist</a>
-        </p>
-        {% if page_obj %}
-            <ul>
-                {% for artist in page_obj %}
-                    <li>
-                        <a href="{% url 'view_artist' artist.id %}"> {{artist.name}} - {{artist.first_name}} {{artist.last_name}} </a>
-                    </li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <p> No artist found.</p>
-        {% endif %}
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-md-8 offset-2">
+                <form>
+                    <div class="input-group">
+                        <input type="text" name="q" class="form-control form-control-lg" placeholder="Search" />
+                        <div class="input-group-append">
+                        <button class="btn btn-dark btn-lg" type="submit" id="button-addon2">Search</button>
+                        </div>
+                    </div>
+                </form>
+                <p>
+                    <a class="btn btn-primary btn-add-artist" href="{% url 'create_album' %}">Add album</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        {% for artist in page_obj %}
+        <div class="card mb-4 shadow">
+            <div class="card-body">
+                <h4 class="card-title"><a href="/artists/{{artist.id}}">{{artist.name}}</a></h4>
+                <p class="card-text">{{artist.last_name}} {{artist.first_name}}</p>
+                <p class="card-text">{{artist.mail}}</p>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 
-        {% if page_obj.has_other_pages %}
-          <ul class="pagination">
+    {% if page_obj.has_other_pages %}
+    <nav class="my-3 container">
+        <ul class="pagination">
             {% if page_obj.has_previous %}
-              <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
-            {% else %}
-              <li class="disabled"><span>&laquo;</span></li>
+                <li class="page-item"><a class="page-link" href="?page={{page_obj.previous_page_number}}">Previous</a></li>
             {% endif %}
             {% for i in page_obj.paginator.page_range %}
-              {% if page_obj.number == i %}
-                <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-              {% else %}
-                <li><a href="?page={{ i }}">{{ i }}</a></li>
-              {% endif %}
+                {% if page_obj.number == i %}
+                    <li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+                {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                {% endif %}
             {% endfor %}
             {% if page_obj.has_next %}
-              <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
-            {% else %}
-              <li class="disabled"><span>&raquo;</span></li>
+                 <li class="page-item"><a class="page-link" href="?page={{page_obj.next_page_number}}">Next</a></li>
             {% endif %}
-          </ul>
-        {% endif %}
+        </ul>
+      </nav>
+    {% endif %}
 
-    </div>
 {% endblock %}
