--- a/record_label_project/templates/navbar.html
+++ b/record_label_project/templates/navbar.html
@@ -35,9 +35,8 @@
       </li>
 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <li class="form-inline my-2 my-lg-0">
+      <a class="btn btn-success my-2 my-sm-0" href="/admin">Admin</a>
+    </li>
   </div>
 </nav>
