hyperlink for news + search/pagination for all

--- a/record_label_project/templates/artist/list_artists.html
+++ b/record_label_project/templates/artist/list_artists.html
@@ -15,7 +15,7 @@
                     </div>
                 </form>
                 <p>
-                    <a class="btn btn-primary btn-add-artist" href="{% url 'create_album' %}">Add album</a>
+                    <a class="btn btn-primary btn-add-list" href="{% url 'create_artist' %}">Add artist</a>
                 </p>
             </div>
         </div>
