--- a/record_label_project/templates/homepage.html
+++ b/record_label_project/templates/homepage.html
@@ -10,8 +10,9 @@
                 <div class="card-body news-div">
                     <img src="{{obj.2}}" style="width:200px">
                     <div>
-                        <h4 class="card-title">{{obj.0}}</></h4>
+                        <a href="{{obj.3}}"><h4 class="card-title">{{obj.0}}</></h4></a>
                         <p class="card-text">{{obj.1}} </p>
+
                     </div>
                 </div>
             </div>
