--- a/record_label_project/templates/artist/list_artists.html
+++ b/record_label_project/templates/artist/list_artists.html
@@ -8,7 +8,7 @@
             <div class="col-md-8 offset-2">
                 <form>
                     <div class="input-group">
-                        <input type="text" name="q" class="form-control form-control-lg" placeholder="Search" />
+                        <input type="text" name="q" class="form-control form-control-lg" placeholder="Search by name" />
                         <div class="input-group-append">
                         <button class="btn btn-dark btn-lg" type="submit" id="button-addon2">Search</button>
                         </div>
