--- a/record_label_project/templates/location/list_locations.html
+++ b/record_label_project/templates/location/list_locations.html
@@ -25,7 +25,7 @@
             {% for location in page_obj %}
                 <div class="card mb-4 shadow">
                     <div class="card-body">
-                        <h4 class="card-title"><a href="/locations/{{location.id}}">{{location.name}}</a></h4>
+                        <h4 class="card-title"><a href="{% url 'view_location' location.id %}">{{location.name}}</a></h4>
                         <p class="card-text">{{location.get_address}}</p>
                     </div>
                 </div>
