--- a/record_label_project/templates/artist/delete_artist.html
+++ b/record_label_project/templates/artist/delete_artist.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block content %}
-    <div class="main">
+    <div class="div-form">
         <form method="POST">
             {% csrf_token %}
             Are you want to delete this artist ?
             <input type="submit" value="Yes" />
-            <a href="/">Cancel </a>
+            <a href="{% url 'list_artists' %}">Cancel </a>
         </form>
     </div>
 {% endblock %}
