--- a/record_label_project/templates/concert/list_concerts.html
+++ b/record_label_project/templates/concert/list_concerts.html
@@ -25,7 +25,7 @@
             {% for concert in page_obj %}
                 <div class="card mb-4 shadow">
                     <div class="card-body">
-                        <h4 class="card-title"><a href="/concerts/{{concert.id}}">{{concert.concert_date}}</a></h4>
+                        <h4 class="card-title"><a href="{% url 'view_concert' concert.id %}">{{concert.concert_date}}</a></h4>
                         <p class="card-text">{{concert.location}}</p>
                     </div>
                 </div>
