--- a/record_label_project/templates/location/view_location.html
+++ b/record_label_project/templates/location/view_location.html
@@ -15,5 +15,6 @@
         <a class="btn btn-danger" href="{% url 'delete_location' location.id %}">Delete location</a>
     </div>
 
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
 {% endblock %}
