--- a/record_label_project/templates/song/list_songs.html
+++ b/record_label_project/templates/song/list_songs.html
@@ -40,24 +40,6 @@
         {% endif%}
     </div>
 
-    {% if page_obj.has_other_pages %}
-    <nav class="my-3 container">
-        <ul class="pagination">
-            {% if page_obj.has_previous %}
-                <li class="page-item"><a class="page-link" href="?page={{page_obj.previous_page_number}}">Previous</a></li>
-            {% endif %}
-            {% for i in page_obj.paginator.page_range %}
-                {% if page_obj.number == i %}
-                    <li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
-                {% else %}
-                    <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
-                {% endif %}
-            {% endfor %}
-            {% if page_obj.has_next %}
-                 <li class="page-item"><a class="page-link" href="?page={{page_obj.next_page_number}}">Next</a></li>
-            {% endif %}
-        </ul>
-      </nav>
-    {% endif %}
+    {% include 'pagination.html' %}
 
 {% endblock %}
